--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -1,13 +1,21 @@
-<html>
-<head>
-    <title>My Component Demo</title>
+
+<!doctype html>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-</head>
-<body>
+    <meta name="theme-color" content="#000000">
+
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+
+    <title>react-apple-signin</title>
+  </head>
+
+  <body>
     <noscript>
-        You need to enable JavaScript to run this app.
+      You need to enable JavaScript to run this app.
     </noscript>
+
     <div id="root"></div>
-</body>
+  </body>
 </html>
