--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -1,12 +1,10 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <meta name="author" content="Plural">
+    <meta name="description" content=" Apple signin for React using the official Apple JS SDK" />
 
     <title>react-apple-signin</title>
   </head>
