:sparkles: react-apple-signin-auth

--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -6,7 +6,7 @@
     <meta name="author" content="A-Tokyo">
     <meta name="description" content=" Apple signin for React using the official Apple JS SDK" />
 
-    <title>react-apple-signin</title>
+    <title>react-apple-signin-auth</title>
   </head>
 
   <body>
