--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="A-Tokyo">
     <meta name="description" content=" Apple signin for React using the official Apple JS SDK" />
 
