--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -45,6 +45,8 @@
     <meta name="description" lang="ur" content="React کے لیے ایپل سائن ان کا استعمال سرکاری Apple JS SDK کے ساتھ" />
     <meta name="description" lang="vi" content="Đăng nhập Apple cho React bằng Apple JS SDK chính thức" />
     <meta name="description" lang="zh" content="使用官方 Apple JS SDK 为 React 提供 Apple 登录" />
+    
+    <link rel="external" href="https://developer.apple.com/sign-in-with-apple" />
   </head>
 
   <body>
