--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -3,27 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="author" content="A-Tokyo">
-    <meta name="description" content=" Apple signin for React using the official Apple JS SDK" />
-
-    <title>react-apple-signin-auth</title>
-  </head>
-
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-
-    <div id="root"></div>
-  </body>
-</html>
-
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Ahmed Tokyo">
     <link rel="author" href="https://ahmedtokyo.com">
 
@@ -66,6 +45,8 @@
     <meta name="description" lang="ur" content="React کے لیے ایپل سائن ان کا استعمال سرکاری Apple JS SDK کے ساتھ" />
     <meta name="description" lang="vi" content="Đăng nhập Apple cho React bằng Apple JS SDK chính thức" />
     <meta name="description" lang="zh" content="使用官方 Apple JS SDK 为 React 提供 Apple 登录" />
+    
+    <link rel="external" href="https://developer.apple.com/sign-in-with-apple" />
   </head>
 
   <body>
