--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -55,5 +55,8 @@
     </noscript>
 
     <div id="root"></div>
+    
+    <!-- Google AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5266987079964279" crossorigin="anonymous"></script>
   </body>
 </html>
