--- a/demo/index.html
+++ b/demo/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ahmed Tokyo">
     <link rel="author" href="https://ahmedtokyo.com">
 
@@ -24,6 +24,7 @@
 
     <link rel="icon" href="/favicon.ico" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
 
     <meta name="description" content=" Apple signin for React using the official Apple JS SDK" />
     <meta name="description" lang="ar" content="تسجيل دخول Apple لـReact باستخدام Apple JS SDK الرسمي" />
@@ -48,14 +49,9 @@
     
     <link rel="external" href="https://developer.apple.com/sign-in-with-apple" />
   </head>
-
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-
     <div id="root"></div>
-    
+    <script type="module" src="/src/main.tsx"></script>
     <!-- Google AdSense -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5266987079964279" crossorigin="anonymous"></script>
   </body>
